Исправлены ошибки в модулях Tree, Graph